# todo-list

./: Cargo.toml  README.md
src/: cli.rs  command.rs  main.rs  storage.rs  task.rs
src/query/: mod.rs
src/query/ast/: expression.rs  mod.rs  parser.rs
src/query/evaluator/: expression.rs  mod.rs  query.rs  reflect.rs  result_set.rs  value.rs
src/query/evaluator/value/: conversion.rs  operations.rs
